# rust-trezor-api

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  messages.rs
src/flows/: sign_tx.rs
src/protos/: messages.rs  messages_binance.rs  messages_bitcoin.rs  messages_bootloader.rs  messages_cardano.rs  messages_common.rs  messages_crypto.rs  messages_debug.rs  messages_eos.rs  messages_ethereum.rs  messages_ethereum_eip712.rs  messages_management.rs  messages_monero.rs  messages_nem.rs  messages_ripple.rs  messages_stellar.rs  messages_tezos.rs  messages_webauthn.rs  mod.rs
src/transport/: error.rs  hid.rs  mod.rs  webusb.rs
